implement data access; update swagger definition
