# src/server/src/IO.Swagger/Models/PurchaseCode.Extensions.cs
@@ -1,0 +1,20 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace IO.Swagger.Models
+{
+    /// <summary>
+    /// Operations for purchase codes manipulation
+    /// </summary>
+    public partial class PurchaseCode
+    {
+        /// <summary>
+        /// Default constructor.
+        /// </summary>
+        public PurchaseCode()
+        {
+        }
+    }
+}
